--- a/index.qmd
+++ b/index.qmd
@@ -1,11 +1,6 @@
----
-title: "ProjetoGerminacao"
----
 
-This is a Quarto website.
+# Uso de diferentes concentrações de extrato de tiririca na germinação de jambú 
 
-To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
+Esta página foi criado com o objetivo de disponibilizar os códigos do trabalho final da disciplina Análise e Visualização de Dados em Fitopatologia (FIP606), ofertada pelo [Programa de Pós-Graduação em Fitopatologia](https://www.dfp.ufv.br/pos/) da UFV e ministrada pelo professor [Emerson Del Ponte](https://emersondelponte.netlify.app/).
 
-```{r}
-1 + 1
-```
+Neste projeto, foi analisada a germinação de sementes de jambu (Acmella oleracea) sob a influência de diferentes concentrações do extrato aquoso de tiririca (Cyperus rotundus). Foram aplicados cinco tratamentos de germinação: controle (0%), 5%, 10%, 25% e 50%. O experimento contou com oito repetições para cada tratamento, com delineamento inteiramente casualizado. 
