modifiquei titulo index

--- a/index.qmd
+++ b/index.qmd
@@ -1,6 +1,6 @@
 
-# Uso de diferentes concentrações de extrato de tiririca na germinação de jambú 
+# Uso de diferentes concentrações de extrato de tiririca na germinação de jambu 
 
 Esta página foi criado com o objetivo de disponibilizar os códigos do trabalho final da disciplina Análise e Visualização de Dados em Fitopatologia (FIP606), ofertada pelo [Programa de Pós-Graduação em Fitopatologia](https://www.dfp.ufv.br/pos/) da UFV e ministrada pelo professor [Emerson Del Ponte](https://emersondelponte.netlify.app/).
 
-Neste projeto, foi analisada a germinação de sementes de jambu (Acmella oleracea) sob a influência de diferentes concentrações do extrato aquoso de tiririca (Cyperus rotundus). Foram aplicados cinco tratamentos de germinação: controle (0%), 5%, 10%, 25% e 50%. O experimento contou com oito repetições para cada tratamento, com delineamento inteiramente casualizado. 
+Neste projeto, foi analisada a germinação de sementes de jambu (*Acmella oleracea*) sob a influência de diferentes concentrações do extrato aquoso de tiririca (*Cyperus rotundus*). Foram aplicados cinco tratamentos de germinação: controle (0%), 5%, 10%, 25% e 50%. O experimento contou com oito repetições para cada tratamento, com delineamento inteiramente casualizado. 
